option java_package = "com.itu.action";
option java_outer_classname = "LocalServerSmartMeterDataRecordProtos";

message LocalServerSmartMeterDataRecord {


  optional int32 id = 1;
  optional int64 timestamp = 2;
  optional int32 sm_index = 3;
  optional string sm_ieeeAddress = 4;
  optional int32 rms_V1 = 5;
  optional float rms_I1 = 6;
  optional int32 theta_1 = 7;
  optional int32 rms_V2 = 8;
  optional float rms_I2 = 9;
  optional int32 theta_2 = 10;
  optional int32 rms_V3 = 11;
  optional float rms_I3 = 12;
  optional int32 mag_V1 = 13;
  optional int32 mag_I1 = 14;
  optional int32 mag_V2 = 15;
  optional int32 sm_V = 16;
  optional int32 sm_I = 17;
  optional int32 mag_I3 = 18;
  optional int32 mag_V3 = 19;
  optional float power = 20;
  optional float energy = 21;
  optional float accumulated_energy = 22;
  optional int32 status = 23;






}

